--- a/source/options/options.scss
+++ b/source/options/options.scss
@@ -22,6 +22,7 @@ $enable-gradients: true;
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/card";
 @import "bootstrap/scss/close";
+@import "bootstrap/scss/dropdown";
 @import "bootstrap/scss/tables";
 
 .pointer {
@@ -41,7 +42,7 @@ $enable-gradients: true;
 }
 
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(lg) {
 
   .btn-md-down-w-10 {
     width: 100%;
